--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -17,7 +17,8 @@ Interning at DoorDash, the market leader in food delivery, was so exciting.
 For my first project, I served a new carousel on our feed page, which took about six weeks. 
 The carousel retrieved the user's most recent order and recommended similar stores to the user. 
 I created the entire system end-to-end, beginning with developing the machine learning algorithm and creating an ETL, reading from recommendations from our database from our search service, and serving the carousel from the feed service.
-I worked pretty hard to get this done as fast and possible. Every week, I felt like I was leveling up.
+I worked pretty hard to get this done as fast and possible. 
+Every week, I felt like I was leveling up.
 
 San Francisco
 ------
@@ -31,6 +32,10 @@ Being back in the city again was fine, except this time many of my Dartmouth and
 <img src='/images/19x/lands_end.jpg' width="31%">
 <img src='/images/19x/muir.jpg' width="31%">
 <img src='/images/19x/pagan_idol.jpg' width="31%">
+
+EMNLP-IJCNLP
+------
+
 
 Research
 ------
@@ -88,8 +93,9 @@ Who are my heroes?
 ------
 * [Randy Pausch](https://www.youtube.com/watch?v=ji5_MqicxSo&t=313s) says, "Tell the truth. All the time."
 * [Mark Manson](https://markmanson.net/fuck-yes) has a law of *F\*ck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
-* I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in a star is born.
+* I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in A Star Is Born.
 * Julianne Moore is great in *Kingsman: The Golden Circle*.
+* Tennis players have an idol they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 
 Closing
 ------
@@ -100,6 +106,35 @@ Songs
 ------
 - Lady Gaga: Shallow, Always Remember Us This Way
 - [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
+
+Job Offers
+------
+You probably think it's stupid for me to post the details of job offers that I got, but I don't care. 
+I'm an advocate for transparency and new grad offers are usually pretty standard, and so here it is:
+
+**Offers:**
+
+| Company   | Salary | Signing Bonus | Stock Options     | Offer Date | Acceptance Deadline | Did I think I would get it | 
+|-----------|--------|---------------|-------------------|------------|---------------------|----------------------------|
+| Blend     | $125k  | $20k          |                   | Sep 6      | Nov 5               | Unsure                     |
+| Thumbtack | $125k  | $15k          | \~$100k RSU/4 yrs | Oct 24     | Nov 15              | No                         |
+
+This is what I didn't get:
+
+**Rejections:**
+
+| Company   | Reject Date | Did I think I would get it (or pass) | Interviews                                           |
+|-----------|-------------|--------------------------------------|------------------------------------------------------|
+| Neeva     | Aug 27      | Maybe                                | Coding challenge, onsite in Mountain View            |
+| Figma     | Sep 17      | Maybe                                | Phone screen, phone interview                        |
+| Benchling | Sep 20      | Yes                                  | Phone screen                                         |
+| Coda      | Sep 24      | No                                   | Coding challenge, phone screen, onsite in Bellevue   |
+| Robinhood | Oct 8       | Yes                                  | Coding challenge, phone screen, onsite in Menlo Park |
+| Affirm    | | Yes                                  | Two phone screens, onsite in SF                      |
+| Palantir  | |                                      | Phone screen                                         |
+
+While I'm at it, I am working to be more comfortable with rejection:
+
 
 
 
