--- a/_posts/2019-09-13-blog-post-10.md
+++ b/_posts/2019-09-13-blog-post-10.md
@@ -32,7 +32,7 @@ We had some great company/team/intern events:
 - Karaoke: good times.
 - Cooking class: made some great pasta and had a really good eggplant appetizer.
 - Pier 39 at Fisherman's Wharf: [7D experiences](https://www.pier39.com/merchant/7d-experience/)
-- SPiN (table tennis bar): with #blub_pingpong.
+- SPiN (table tennis bar): with `#blub_pingpong`.
 
 <img src='/images/19x/facebook.jpg' width="32%">
 <img src='/images/19x/interns_1.jpg' width="32%">
@@ -54,7 +54,7 @@ I had many friends in the city, from Dartmouth, Tri-Kap, Blend, high school, and
 <img src='/images/19x/chinatown.jpg' width="32%">
 Left, the futuristic-retro-dystopian BART public transit; middle, my friend Yifei and I on the BART; right: the street art outside my house in Chinatown. 
 
-I had my first Michellin-starred meal, our team's Hackathon prize, at Gary Danko. I got four entrees: Roast Maine Lobster with Potato Purée, Horseradish Crusted Salmon Medallion, Pork Tenderloin with Confit Pork Belly, and Seared Filet of Beef with Yukon Potatoes. The lobster with potato melted in my mouth and had so much flavor. I noticed so many details in their service such as presentation of food, folding my napkin when I went to the restroom, thick toilet paper. I'm hooked on the fine dining experience now but will do my best to avoid it.
+I had my first Michellin-starred meal, our team's Hackathon prize, at Gary Danko. I got four entrees: Roast Maine Lobster with Potato Purée, Horseradish Crusted Salmon Medallion, Pork Tenderloin with Confit Pork Belly, and Seared Filet of Beef with Yukon Potatoes. The lobster with potato melted in my mouth and had so much flavor. I noticed so many details in their service such as presentation of food, folding my napkin when I went to the restroom, and thick toilet paper. I'm hooked on the fine dining experience now but will do my best to avoid it.
 
 <img src='/images/19x/datacartel.jpg' width="48%">
 <img src='/images/19x/gary_danko.jpg' width="48%">
@@ -68,7 +68,7 @@ I really enjoyed living in a student homestay in Chinatown. It was only 2 blocks
 <img src='/images/19x/housemates_2.jpg' width="32%">
 <img src='/images/19x/dance_party.jpg' width="32%">
 <img src='/images/19x/shelli.jpg' width="32%">
-Top left, Giants gamme with my housemates (my first baseball game); top middle, my room; top right, Mission Dolores Park; bottom left, Market St.; bottom middle, an 1840's dance party venue; bottom left, my host Shelli and I.
+Top left, Giants game with my housemates (my first baseball game); top middle, my room; top right, Mission Dolores Park; bottom left, Market St.; bottom middle, an 1840's dance party venue; bottom left, my host Shelli and I.
 
 ### Places
 
@@ -159,7 +159,7 @@ Me on writing papers: In ten years, five years, or maybe even one year, you will
 
 Songs
 ------
-* [Best of Eden](https://www.youtube.com/watch?v=coo0t513Tek&t=4925s) by MrOtterMusic is absolutely the sappiest and my favorite remix I've ever listened to.
+* [Best of Eden](https://www.youtube.com/watch?v=coo0t513Tek&t=4925s) by MrOtterMusic is absolutely the sappiest I've ever listened to and is my favorite remix.
 
 
 
