--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -1,5 +1,5 @@
 ---
-title: 'Summer in SF (2019)'
+title: 'Fall 2019'
 date: 2019-12-21
 permalink: /posts/2019/12/blog-post-10/
 tags:
@@ -16,14 +16,13 @@ DoorDash
 Interning at DoorDash, the market leader in food delivery, was so exciting.
 For my first project, I served a new carousel on our feed page, which took about six weeks. 
 The carousel retrieved the user's most recent order and recommended similar stores to the user. 
-I created the entire system end-to-end, beginning with developing the machine learning algorithm and creating an ETL, reading from recommendations from our database from our search service, and serving the carousel from the feed service.
-I worked pretty hard to get this done as fast and possible. 
+I created the entire system end-to-end, from the developing the machine learning algorithm and creating an ETL, to reading from recommendations from our search service database, and to finally serving the carousel from the feed service.
 Every week, I felt like I was leveling up.
 
 San Francisco
 ------
 
-Being back in the city again was fine, except this time many of my Dartmouth and Blend friends who were here over the summer went back to school. From Sep 27 - Oct 31, I lived in the [Winsor Hotel](https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj_5szen7vlAhXUFn0KHYHgAzQYABAAGgJwdg&ohost=www.google.com&cid=CAESQOD2R7T-APRicWd4SRBx69NJh9yOQ8hOd5dmBIL5E4jsJcr7Vdl1PN1T2pMW5XIFCwSfrxCFWDaH7xsBz8vVxrI&sig=AOD64_3sPJjJPGYKvH87QvvIFx9BdEzqZQ&q=&ved=2ahUKEwjhksLen7vlAhXVsJ4KHdN2AHgQ0Qx6BAgQEAE&adurl=), a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
+Being back in the city again was fine, except this time, many of my Dartmouth and Blend friends, who were here over the summer, went back to school. From Sep 27 - Oct 31, I lived in the [Winsor Hotel](https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj_5szen7vlAhXUFn0KHYHgAzQYABAAGgJwdg&ohost=www.google.com&cid=CAESQOD2R7T-APRicWd4SRBx69NJh9yOQ8hOd5dmBIL5E4jsJcr7Vdl1PN1T2pMW5XIFCwSfrxCFWDaH7xsBz8vVxrI&sig=AOD64_3sPJjJPGYKvH87QvvIFx9BdEzqZQ&q=&ved=2ahUKEwjhksLen7vlAhXVsJ4KHdN2AHgQ0Qx6BAgQEAE&adurl=), a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
 
 ### Places
 
@@ -36,10 +35,15 @@ Being back in the city again was fine, except this time many of my Dartmouth and
 EMNLP-IJCNLP
 ------
 
+The first day, I went to Deep Learning for NLP and Conversational AI tutorials, which were good. The second day, I went into the city to see the Tsim Tsa Tui Promenade, the glamorous [K11 mall](https://hk.k11.com/), and Victoria's Peak. 
+
+Some lessons that I learned from the workshop:
+- Some papers are marginal. They don't take big risks or advance the field substantially but demonstrate small improvements and are technically sound, and so reviewers often can't find good reasons to reject them. Don't work on these marginal papers. Dream bigger and take a risk. Even if you get rejected, you won't regret it.
+- Not all papers have to be on methodological innovations. [[Example]](https://www.aclweb.org/anthology/D19-1051.pdf)
 
 Research
 ------
-I didn't have enough time (i.e., wasn't self motivated enough) to do any projects by myself. 
+I didn't have enough time (i.e., wasn't self-motivated enough) to do any projects by myself. 
 My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper. 
 I am so proud of him and I hope he learned that hard work can pay off. 
 Saeed and I did not get a ticket to NeurIPS, however, but my brother did, and so he will be presenting. 
@@ -51,11 +55,11 @@ Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei
 <a href="https://github.com/BMIRDS/HistoGAN" style="color:#2C2CA8" target="_blank">[Github]</a>
 <img height="16" src="https://img.shields.io/github/stars/BMIRDS/HistoGAN.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/HistoGAN&link=https://github.com/BMIRDS/HistoGAN">
 
-Fitness
+Health & Fitness
 ------
 I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
 
-
+**Meniscectomy.** I had hurt my knee from last December from squatting (I thought I was big), which had previously been diagnosed as an IT band injury. But I went to see an orthopaedic surgeon in SF who did an MRI and told me I had a sizable tear in my meniscus, which I think was from playing tennis. 
 
 Reading
 ------
@@ -80,6 +84,7 @@ His final remarks, which he addressed to his family, touched me dearly.
 
 **Everything is F\*cked: A Book about Hope.** I was excited to read this book because I liked *The Subtle Art of Not Giving a F\*ck* so much. I had a hard time getting through the first half, which talked about this struggle between your feeling brain and your thinking brain (i.e., doing what feels good versus what you know is good in the long run). In the second half of the book, however, Manson brought to light many important concepts. 
 
+- **The Uncomfortable Truth**. You will one day die, and beyond a small group of people for an extremely brief amount of time, nothing you do matters.
 - **The Formula of Humanity**. Manson loves Immanuel Kant, who says that the supreme value in the universe is the thing that conceives of value itself (i.e., the humanity is the greatest value). And Manson's formula of humanity therefore states, "Act that you use humanity, whether in your own person or in the person of any other, always at the same time as an end, never merely as a means." Do something because it's the right thing to do, not beacuse of the outcome.
 - **Meditation.** Manson's account of [Quang Duc](http://100photos.time.com/photos/malcolm-browne-burning-monk) moved me, and he describes meditation as "observing the interiors of your mind and heart, in all their horror and glory." 
 - **Adulthood versus Adolescence**. While adolescents use principles as a means to get pleasure, adults value principles as ends in and of themselves. Manson defines adulthood as "the realization that sometimes an abstract principle is right and good for it's own sake, that even if it hurts you today, even if it hurts other, being honest is still the right thing to do."
@@ -95,22 +100,12 @@ Who are my heroes?
 * [Mark Manson](https://markmanson.net/fuck-yes) has a law of *F\*ck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
 * I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in A Star Is Born.
 * Julianne Moore is great in *Kingsman: The Golden Circle*.
-* Tennis players have an idol they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
+* Most tennis players have an idol they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 
-Closing
-------
-
-I want to visit Cappadocia, Turkey.
-
-Songs
-------
-- Lady Gaga: Shallow, Always Remember Us This Way
-- [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
-
-Job Offers
+Recruiting
 ------
 You probably think it's stupid for me to post the details of job offers that I got, but I don't care. 
-I'm an advocate for transparency and new grad offers are usually pretty standard, and so here it is:
+I'm an advocate for transparency, and new grad offers are usually pretty standard, and so here it is:
 
 **Offers:**
 
@@ -133,9 +128,17 @@ This is what I didn't get:
 | Affirm    | | Yes                                  | Two phone screens, onsite in SF                      |
 | Palantir  | |                                      | Phone screen                                         |
 
-While I'm at it, I am working to be more comfortable with rejection:
+While we're here, I am working on being more comfortable with rejection:
 
+Closing
+------
 
+I want to visit Cappadocia, Turkey.
+
+Songs
+------
+- Lady Gaga: Shallow, Always Remember Us This Way
+- [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
 
 
 
