--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -35,11 +35,23 @@ Being back in the city again was fine, except this time, many of my Dartmouth an
 EMNLP-IJCNLP
 ------
 
-The first day, I went to Deep Learning for NLP and Conversational AI tutorials, which were good. The second day, I went into the city to see the Tsim Tsa Tui Promenade, the glamorous [K11 mall](https://hk.k11.com/), and Victoria's Peak. 
+The first day, I went to Deep Learning for NLP and Conversational AI tutorials, which were good. The second day, I went into the city to see the Tsim Tsa Tsui Promenade, the glamorous [K11 mall](https://hk.k11.com/), and Victoria's Peak. 
 
-Some lessons that I learned from the workshop:
+Some lessons that I learned from the conference:
 - Some papers are marginal. They don't take big risks or advance the field substantially but demonstrate small improvements and are technically sound, and so reviewers often can't find good reasons to reject them. Don't work on these marginal papers. Dream bigger and take a risk. Even if you get rejected, you won't regret it.
-- Not all papers have to be on methodological innovations. [[Example]](https://www.aclweb.org/anthology/D19-1051.pdf)
+- Not all papers have to be on methodological innovations. [[Example 1]](https://www.aclweb.org/anthology/D19-1051.pdf) [[Example 2]]()
+- There are so many unsolved problems in NLP, and many papers introduced new unsolved tasks for us to pursue.
+
+On the third day of the conference, my friend June and I took a cable car across the island to see the Tian Tan Buddha. 
+I loved the views from the cable car, and the Hall of One-Thousand Buddhas was beautiful. 
+That evening, we went to Hong Kong Disneyland, for which the conference had rented out Tomorrowland exclusively for EMNLP participants. 
+We enjoyed the buffet dinner and went on the Star Wars, Iron Man, Ant Man, and Small World rides. 
+
+The last day, I presented my poster during the last session. 
+It seemed, however, that there was less interest than when I had previously presented at ICLR.
+I had also added a sign saying I was a prospective PhD student, but unfortunately no professors came to talk to me.
+
+Throughout the conference, I frequently went to the hot tub and sauna at our hotel, which was a great place for me to get away from all the sounds of the city and spend some time with my thoughts.
 
 Research
 ------
@@ -98,7 +110,7 @@ Who are my heroes?
 ------
 * [Randy Pausch](https://www.youtube.com/watch?v=ji5_MqicxSo&t=313s) says, "Tell the truth. All the time."
 * [Mark Manson](https://markmanson.net/fuck-yes) has a law of *F\*ck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
-* I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in A Star Is Born.
+* I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in *A Star Is Born*.
 * Julianne Moore is great in *Kingsman: The Golden Circle*.
 * Most tennis players have an idol they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 
@@ -125,7 +137,7 @@ This is what I didn't get:
 | Benchling | Sep 20      | Yes                                  | Phone screen                                         |
 | Coda      | Sep 24      | No                                   | Coding challenge, phone screen, onsite in Bellevue   |
 | Robinhood | Oct 8       | Yes                                  | Coding challenge, phone screen, onsite in Menlo Park |
-| Affirm    | | Yes                                  | Two phone screens, onsite in SF                      |
+| Affirm    | Nov 5       | Yes                                  | Two phone screens, onsite in SF                      |
 | Palantir  | |                                      | Phone screen                                         |
 
 While we're here, I am working on being more comfortable with rejection:
