--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -58,8 +58,7 @@ Research
 I didn't have enough time (i.e., wasn't self-motivated enough) to do any projects by myself. 
 My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper. 
 I am so proud of him and I hope he learned that hard work can pay off. 
-Saeed and I did not get a ticket to NeurIPS, however, but my brother did, and so he will be presenting. 
-I'm pretty jealous of him.
+(I'm pretty jealous.)
 
 <a href="https://arxiv.org/abs/1910.05827" style="color:#2C2CA8" target="_blank"><b>Generative Image Translation for Data Augmentation in Colorectal Histopathology Images</b></a> <br>
 Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei**, Saeed Hassanpour<br>
@@ -72,6 +71,8 @@ Health & Fitness
 I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
 
 **Meniscectomy.** I had hurt my knee from last December from squatting (I thought I was big), which had previously been diagnosed as an IT band injury. But I went to see an orthopaedic surgeon in SF who did an MRI and told me I had a sizable tear in my meniscus, which I think was from playing tennis. 
+
+**Nose surgeries.** I had a turbinate reduction to help with my breathing/snoring, which is a small procedure.
 
 Reading
 ------
@@ -112,7 +113,7 @@ Who are my heroes?
 * [Mark Manson](https://markmanson.net/fuck-yes) has a law of *F\*ck Yes or No*, which says that if you're in the grey area, you've already lost (i.e., if you have to think about it, the answer is no). 
 * I loved [Lady Gaga](https://www.youtube.com/watch?v=5vheNbQlsyU) in *A Star Is Born*.
 * Julianne Moore is great in *Kingsman: The Golden Circle*.
-* Most tennis players have an idol they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
+* Most tennis players have an idol that they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 
 Recruiting
 ------
