decrease font size

--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -35,11 +35,13 @@ Being back in the city again was fine, except this time, many of my Dartmouth an
 EMNLP-IJCNLP
 ------
 
-The first day, I went to Deep Learning for NLP and Conversational AI tutorials, which were good. The second day, I went into the city to see the Tsim Tsa Tsui Promenade, the glamorous [K11 mall](https://hk.k11.com/), and Victoria's Peak. 
+My data augmentation paper was accepted to EMNLP, and so I and Chengyu, a co-worker from Protago Labs went to Hong Kong from November 3-7.
+The first day, I went to Deep Learning for NLP and Conversational AI tutorials, which were good. 
+The second day, I went into the city to see the Tsim Tsa Tsui Promenade, the glamorous [K11 mall](https://hk.k11.com/), and Victoria's Peak. 
 
 Some lessons that I learned from the conference:
-- Some papers are marginal. They don't take big risks or advance the field substantially but demonstrate small improvements and are technically sound, and so reviewers often can't find good reasons to reject them. Don't work on these marginal papers. Dream bigger and take a risk. Even if you get rejected, you won't regret it.
-- Not all papers have to be on methodological innovations. [[Example 1]](https://www.aclweb.org/anthology/D19-1051.pdf) [[Example 2]]()
+- Some papers are marginal. They don't take big risks or advance the field substantially but instead demonstrate small improvements and are technically sound, so reviewers often can't find good reasons to reject them. Don't work on these marginal papers. Dream bigger and take a risk. Even if you get rejected, you won't regret it.
+- Not all papers have to be on methodological innovations. [[Example 1]](https://www.aclweb.org/anthology/D19-1051.pdf) [[Example 2]](https://arxiv.org/abs/1909.01326).
 - There are so many unsolved problems in NLP, and many papers introduced new unsolved tasks for us to pursue.
 
 On the third day of the conference, my friend June and I took a cable car across the island to see the Tian Tan Buddha. 
@@ -51,13 +53,13 @@ The last day, I presented my poster during the last session.
 It seemed, however, that there was less interest than when I had previously presented at ICLR.
 I had also added a sign saying I was a prospective PhD student, but unfortunately no professors came to talk to me.
 
-Throughout the conference, I frequently went to the hot tub and sauna at our hotel, which was a great place for me to get away from all the sounds of the city and spend some time with my thoughts.
+Throughout the conference, I frequently went to the hot tub and sauna at our hotel, which was a great place for me to get away from all the sounds of the city and spend some time alone with my thoughts.
 
 Research
 ------
 I didn't have enough time (i.e., wasn't self-motivated enough) to do any projects by myself. 
 My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper. 
-I am so proud of him and I hope he learned that hard work can pay off. 
+I am so proud of him, and I hope he learned that hard work can pay off. 
 (I'm pretty jealous.)
 
 <a href="https://arxiv.org/abs/1910.05827" style="color:#2C2CA8" target="_blank"><b>Generative Image Translation for Data Augmentation in Colorectal Histopathology Images</b></a> <br>
@@ -70,9 +72,11 @@ Health & Fitness
 ------
 I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
 
-**Meniscectomy.** I had hurt my knee from last December from squatting (I thought I was big), which had previously been diagnosed as an IT band injury. But I went to see an orthopaedic surgeon in SF who did an MRI and told me I had a sizable tear in my meniscus, which I think was from playing tennis. 
+**Meniscectomy.** Last December, I had hurt my knee from squatting, and it had previously been diagnosed as an IT band injury. But I went to see James Chen, an orthopaedic surgeon in SF, who did an MRI and told me I had a sizable tear in my meniscus, which I think was from playing tennis. 
 
-**Nose surgeries.** I had a turbinate reduction to help with my breathing/snoring, which is a small procedure.
+On November 22, I had a partial meniscectomy, a simple surgery. The recovery, however, was not as easy as I thought it would be. I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. I was not very productive during that time, and it made me realize I take good mobility for granted.
+
+**Nose surgeries.** I had a turbinate reduction, a small procedure to help with my breathing/snoring.
 
 Reading
 ------
