--- a/_drafts/2019-12-22-blog-post-11.md
+++ b/_drafts/2019-12-22-blog-post-11.md
@@ -19,6 +19,8 @@ The carousel retrieved the user's most recent order and recommended similar stor
 I created the entire system end-to-end, from the developing the machine learning algorithm and creating an ETL, to reading from recommendations from our search service database, and to finally serving the carousel from the feed service.
 Every week, I felt like I was leveling up.
 
+One important lesson that I learned is that deep learning is not always a solution. I spent about a week working on how to tag items with their food types. At first I came up with a deep learning solution using BERT and new pre-training tasks, but after manually evaluating a couple hundred samples of data myself, I realized that a rule-based approach is most appropriate.
+
 San Francisco
 ------
 
@@ -158,6 +160,9 @@ Songs
 - Lady Gaga: Shallow, Always Remember Us This Way
 - [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
 
+Other
+------
+- I got sick with a runny nose, sore throat, and cough about a week after my surgery, but after my doctor prescribed Amoxicillin / Clavulanic acid and I felt better.
 
 
 
