add new blog post

--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -1,6 +1,6 @@
 ---
 title: 'Fall 2019'
-date: 2019-12-21
+date: 2019-12-17
 permalink: /posts/2019/12/blog-post-10/
 tags:
   - san francisco
@@ -8,7 +8,7 @@ tags:
   - doordash
 ---
 
-Intro asdf
+I interned at DoorDash in San Francisco this fall and also did a bit of traveling.
 
 DoorDash
 ------
@@ -19,20 +19,32 @@ The carousel retrieved the user's most recent order and recommended similar stor
 I created the entire system end-to-end, from the developing the machine learning algorithm and creating an ETL, to reading from recommendations from our search service database, and to finally serving the carousel from the feed service.
 Every week, I felt like I was leveling up.
 
-One important lesson that I learned is that deep learning is not always a solution. I spent about a week working on how to tag items with their food types. At first I came up with a deep learning solution using BERT and new pre-training tasks, but after manually evaluating a couple hundred samples of data myself, I realized that a rule-based approach is most appropriate.
+One important lesson that I learned is that deep learning is not always the best solution. 
+I spent about a week working on how to tag items with their food types. 
+At first I came up with a deep learning solution using BERT and new pre-training tasks, but after manually evaluating a couple hundred samples of data myself, I realized that a rule-based approach is most appropriate.
+
+<img src='/images/19f/doordash_office.jpg' width="31%">
+<img src='/images/19f/doordash_trophy.jpg' width="31%">
+<img src='/images/19f/also_like.jpg' width="31%">
+Left, my desk at DoorDash; middle, *not* my trophy; right, the carousel I made.
 
 San Francisco
 ------
 
 Being back in the city again was fine, except this time, many of my Dartmouth and Blend friends, who were here over the summer, went back to school. From Sep 27 - Oct 31, I lived in the [Winsor Hotel](https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj_5szen7vlAhXUFn0KHYHgAzQYABAAGgJwdg&ohost=www.google.com&cid=CAESQOD2R7T-APRicWd4SRBx69NJh9yOQ8hOd5dmBIL5E4jsJcr7Vdl1PN1T2pMW5XIFCwSfrxCFWDaH7xsBz8vVxrI&sig=AOD64_3sPJjJPGYKvH87QvvIFx9BdEzqZQ&q=&ved=2ahUKEwjhksLen7vlAhXVsJ4KHdN2AHgQ0Qx6BAgQEAE&adurl=), a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
 
+Later, I moved back to the student homestay in Chinatown, where I lived for the summer.
+
 ### Places
 
-* asdf
+* Sausalito
+* Office visits: Flexport; Robinhood, Thumbtack, Affirm, Palantir
+* Bars: PianoFight
 
-<img src='/images/19x/lands_end.jpg' width="31%">
-<img src='/images/19x/muir.jpg' width="31%">
-<img src='/images/19x/pagan_idol.jpg' width="31%">
+<img src='/images/19f/winsor.jpg' width="31%">
+<img src='/images/19f/sixth_street.jpg' width="31%">
+<img src='/images/19f/tenderloin.jpg' width="31%">
+Left, my room at the Winsor Hotel; middle, 6th street; right, the Tenderloin.
 
 EMNLP-IJCNLP
 ------
@@ -57,28 +69,42 @@ I had also added a sign saying I was a prospective PhD student, but unfortunatel
 
 Throughout the conference, I frequently went to the hot tub and sauna at our hotel, which was a great place for me to get away from all the sounds of the city and spend some time alone with my thoughts.
 
+<img src='/images/19f/victoria_peak.jpg' width="31%">
+<img src='/images/19f/hk_disneyland.jpg' width="31%">
+<img src='/images/19f/big_buddha.jpg' width="31%">
+Left, Victoria Peak; middle, Hong Kong disneyland with Chengyu; right, the Big Buddha.
+
+NeurIPS
+------
+
+I went to Vancouver for one day to attend the Machine Learning for Health Workshop at NeurIPS.
+It was pretty surreal seeing my brother, a high school student, present his work to over 500 people as a spotlight talk.
+The recording is [here](https://slideslive.com/38921879/machine-learning-for-health-ml4h-what-makes-machine-learning-in-medicine-different-2) (starts at 56:03). 
+I'm so proud of him.
+
 Research
 ------
-I didn't have enough time (i.e., wasn't self-motivated enough) to do any projects by myself. 
-My brother's paper, which he completed over the summer, was accepted to the [NeurIPS Machine Learning for Health Workshop](https://ml4health.github.io/2019/) as a full paper. 
-I am so proud of him, and I hope he learned that hard work can pay off. 
-(I'm pretty jealous.)
+I didn't have enough time (i.e., wasn't self-motivated enough) to do any projects by myself, but my brother's paper was accepted to the machine learning for health workshop at NeurIPS.
 
 <a href="https://arxiv.org/abs/1910.05827" style="color:#2C2CA8" target="_blank"><b>Generative Image Translation for Data Augmentation in Colorectal Histopathology Images</b></a> <br>
 Jerry Wei, Arief Suriawinata, Louis Vaickus, Bing Ren, Xiaoying Liu, **Jason Wei**, Saeed Hassanpour<br>
-*NeurIPS ML4H Workshop 2019* (acceptance rate: 19/111 = 17%) <br>
-<a href="https://github.com/BMIRDS/HistoGAN" style="color:#2C2CA8" target="_blank">[Github]</a>
-<img height="16" src="https://img.shields.io/github/stars/BMIRDS/HistoGAN.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/HistoGAN&link=https://github.com/BMIRDS/HistoGAN">
+*NeurIPS ML4H Workshop 2019*
+
+Moving forward, I will try to see research as a creative art rather than a technical exercise, and approach it with an attitude of fun.
 
 Health & Fitness
 ------
 I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
 
-**Meniscectomy.** Last December, I had hurt my knee from squatting, and it had previously been diagnosed as an IT band injury. But I went to see James Chen, an orthopaedic surgeon in SF, who did an MRI and told me I had a sizable tear in my meniscus, which I think was from playing tennis. 
+**Meniscectomy.** Last December, I had hurt my knee from squatting, which led to an IT band injury. 
+After playing tennis while I was home, I felt more pain, so I went to see James Chen, an orthopaedic surgeon in SF.
+I got a knee MRI and Dr. Chen told me I had a sizable tear in my meniscus. 
 
-On November 22, I had a partial meniscectomy, a simple surgery. The recovery, however, was not as easy as I thought it would be. I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. I was not very productive during that time, and it made me realize I take good mobility for granted.
+On November 22, I had a partial meniscectomy, a simple surgery. The recovery, however, was not as easy as I thought it would be. I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. I was not very productive during that time, and it made me realize I take good mobility for granted. After exactly two weeks on crutches, I was able to walk again and was feeling better.
 
-**Nose surgeries.** I had a turbinate reduction, a small procedure to help with my breathing/snoring.
+**Nose surgeries.** I saw Dr. Jacob Johnson, an ENT in SF. I had a turbinate reduction, a small procedure to help with my breathing/snoring. So far, it hasn't felt like anything changed.
+
+**Getting sick.** I got sick with a runny nose, sore throat, and cough about ten days after my surgery, which turned out to be Moraxella catarrhalis. I felt better after taking Augmentin antibiotics, and then benzonatate.
 
 Reading
 ------
@@ -110,8 +136,6 @@ His final remarks, which he addressed to his family, touched me dearly.
 
 I plan to read this book again in the future and re-evaluate it.
 
-https://123movies.pics/movie/a-star-is-born/vxMTZvG2/zve5IX74-watch-online.html
-
 
 Who are my heroes?
 ------
@@ -124,31 +148,31 @@ Who are my heroes?
 
 Recruiting
 ------
-You probably think it's stupid for me to post the details of job offers that I got, but I don't care. 
+You probably think it's silly for me to post the details of job offers that I got and didn't get, but I don't care. 
 I'm an advocate for transparency, and new grad offers are usually pretty standard, and so here it is:
 
 **Offers:**
 
-| Company   | Salary | Signing Bonus | Stock Options     | Offer Date | Acceptance Deadline | Did I think I would get it | 
-|-----------|--------|---------------|-------------------|------------|---------------------|----------------------------|
-| Blend     | $125k  | $20k          |                   | Sep 6      | Nov 5               | Unsure                     |
-| Thumbtack | $125k  | $15k          | \~$100k RSU/4 yrs | Oct 24     | Nov 15              | No                         |
-
-This is what I didn't get:
+| Company   | Salary | Signing Bonus | Stock Options     | Offer Date | Deadline | My prediction | 
+|-----------|--------|---------------|-------------------|------------|----------|---------------|
+| Blend     | $125k  | $20k          |                   | Sep 6      | Nov 5    | Unsure        |
+| Thumbtack | $125k  | $15k          | \~$100k RSU/4 yrs | Oct 24     | Nov 15   | No            |
 
 **Rejections:**
 
-| Company   | Reject Date | Did I think I would get it (or pass) | Interviews                                           |
-|-----------|-------------|--------------------------------------|------------------------------------------------------|
-| Neeva     | Aug 27      | Maybe                                | Coding challenge, onsite in Mountain View            |
-| Figma     | Sep 17      | Maybe                                | Phone screen, phone interview                        |
-| Benchling | Sep 20      | Yes                                  | Phone screen                                         |
-| Coda      | Sep 24      | No                                   | Coding challenge, phone screen, onsite in Bellevue   |
-| Robinhood | Oct 8       | Yes                                  | Coding challenge, phone screen, onsite in Menlo Park |
-| Affirm    | Nov 5       | Yes                                  | Two phone screens, onsite in SF                      |
-| Palantir  | |                                      | Phone screen                                         |
+| Company   | Reject Date | My prediction | Interviews                                           |
+|-----------|-------------|---------------|------------------------------------------------------|
+| Neeva     | Aug 27      | Unsure        | Coding challenge, onsite in Mountain View            |
+| Figma     | Sep 17      | Unsure        | Phone screen, phone interview                        |
+| Benchling | Sep 20      | Yes           | Phone screen                                         |
+| Coda      | Sep 24      | No            | Coding challenge, phone screen, onsite in Bellevue   |
+| Robinhood | Oct 8       | Yes           | Coding challenge, phone screen, onsite in Menlo Park |
+| Affirm    | Nov 5       | Yes           | Two phone screens, onsite in SF                      |
+| Palantir  | Dec 16      | No            | Phone screen, onsite in Palo Alto                    |
 
 While we're here, I am working on being more comfortable with rejection:
+
+<img src='/images/19f/rejections.jpg' width="95%">
 
 Closing
 ------
@@ -157,13 +181,8 @@ I want to visit Cappadocia, Turkey.
 
 Songs
 ------
-- Lady Gaga: Shallow, Always Remember Us This Way
+- Lady Gaga: Shallow, Always Remember Us This Way, [Your Song](https://www.youtube.com/watch?v=T8lWjQRhQXY)
 - [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
-
-Other
-------
-- I got sick with a runny nose, sore throat, and cough about a week after my surgery, but after my doctor prescribed Amoxicillin / Clavulanic acid and I felt better.
-
 
 
 
